// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpTextWrapper matches the snapshot by default 1`] = `
.c7 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c2:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c3::-moz-focus-inner {
  border-width: 0;
}

.c3:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c4:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c5 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 >:first-child {
  overflow: hidden;
  -webkit-transition: height 300ms ease-out;
  transition: height 300ms ease-out;
}

.c0 {
  max-width: 600px;
  font-weight: normal;
  margin: 0 20px 0 25px;
}

.c6 {
  min-width: 14px;
  min-height: 14px;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  display: block;
  margin: -44px -10px 10px 0;
  background-color: transparent;
  float: right;
  padding: 3px 0 0 6px;
}

.c6:hover {
  color: #0066cd;
}

.c6:focus {
  border: 1px solid #0066cd;
  outline: none;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:focus svg {
  fill: #0066cd;
  color: #0066cd;
}

.c6:active {
  box-shadow: none;
}

.c8:hover {
  fill: #0066cd;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c5::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div>
  <div
    class="c0 yoast-help"
  >
    <button
      aria-expanded="false"
      aria-label="Open help"
      class="c1 c2 c3 c4 c5 c6 yoast-help__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c7 yoast-svg-icon yoast-svg-icon-question-circle c8"
        fill="#616161"
        focusable="false"
        role="img"
        viewBox="0 0 1792 1792"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1024 1376v-192q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v192q0 14 9 23t23 9h192q14 0 23-9t9-23zm256-672q0-88-55.5-163t-138.5-116-170-41q-243 0-371 213-15 24 8 42l132 100q7 6 19 6 16 0 25-12 53-68 86-92 34-24 86-24 48 0 85.5 26t37.5 59q0 38-20 61t-68 45q-63 28-115.5 86.5t-52.5 125.5v36q0 14 9 23t23 9h192q14 0 23-9t9-23q0-19 21.5-49.5t54.5-49.5q32-18 49-28.5t46-35 44.5-48 28-60.5 12.5-81zm384 192q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
        />
      </svg>
    </button>
    <div
      class="c9"
    />
  </div>
</div>
`;

exports[`HelpTextWrapper matches the snapshot when the help text button is focused 1`] = `
.c7 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c2:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c3::-moz-focus-inner {
  border-width: 0;
}

.c3:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c4:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c5 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10 {
  color: #767676;
  margin-top: 0;
}

.c9 >:first-child {
  overflow: hidden;
  -webkit-transition: height 300ms ease-out;
  transition: height 300ms ease-out;
}

.c0 {
  max-width: 600px;
  font-weight: normal;
  margin: 0 20px 0 25px;
}

.c6 {
  min-width: 14px;
  min-height: 14px;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  display: block;
  margin: -44px -10px 10px 0;
  background-color: transparent;
  float: right;
  padding: 3px 0 0 6px;
}

.c6:hover {
  color: #0066cd;
}

.c6:focus {
  border: 1px solid #0066cd;
  outline: none;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c6:focus svg {
  fill: #0066cd;
  color: #0066cd;
}

.c6:active {
  box-shadow: none;
}

.c8:hover {
  fill: #0066cd;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c5::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div>
  <div
    class="c0 yoast-help"
  >
    <button
      aria-controls="yoast-help-2-panel"
      aria-expanded="true"
      aria-label="Open help"
      class="c1 c2 c3 c4 c5 c6 yoast-help__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c7 yoast-svg-icon yoast-svg-icon-question-circle c8"
        fill="#616161"
        focusable="false"
        role="img"
        viewBox="0 0 1792 1792"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1024 1376v-192q0-14-9-23t-23-9h-192q-14 0-23 9t-9 23v192q0 14 9 23t23 9h192q14 0 23-9t9-23zm256-672q0-88-55.5-163t-138.5-116-170-41q-243 0-371 213-15 24 8 42l132 100q7 6 19 6 16 0 25-12 53-68 86-92 34-24 86-24 48 0 85.5 26t37.5 59q0 38-20 61t-68 45q-63 28-115.5 86.5t-52.5 125.5v36q0 14 9 23t23 9h192q14 0 23-9t9-23q0-19 21.5-49.5t54.5-49.5q32-18 49-28.5t46-35 44.5-48 28-60.5 12.5-81zm384 192q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
        />
      </svg>
    </button>
    <div
      class="c9"
    >
      <div
        class="yoast-help__panel slide-enter slide-enter-active"
        id="yoast-help-2-panel"
        style="height: 0px;"
      >
        <p
          class="c10"
        />
      </div>
    </div>
  </div>
</div>
`;
